[FIX] #60216 Comment for feedback - Save button translation

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
@@ -21,7 +21,7 @@
                     @Html.HiddenFor(m => m.LanguageId)
                     @Html.HiddenFor(m => m.QuestionId)
                     <br/>
-                    <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Save </a>
+                    <a href="#" id="btnSaveComment" class="btn templateQuickButton">@Translation.GetCoreTextTranslation("Spara")</a>
                 </div>
             }
         }
