--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
@@ -101,29 +101,29 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:red">För uppsägning</span>
+                                                    <span >För uppsägning</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
-                                                    <span style="color:red"> @Model.ContractNoticeOfRemovalCount </span>
+                                                    <span > @Model.ContractNoticeOfRemovalCount </span>
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:#FF8000"> För uppföljning</span>
+                                                    <span > För uppföljning</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
-                                                    <span style="color:#FF8000">  @Model.ContractFollowUpCount </span>
+                                                    <span >  @Model.ContractFollowUpCount </span>
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:#009900">Löpande</span>
+                                                    <span >Löpande</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
-                                                    <span style="#009900"> @Model.RunningCases</span>
+                                                    <span > @Model.RunningCases</span>
                                                 </td>
                                             </tr>
                                         </table>
