--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
@@ -16,31 +16,20 @@
                 <h4>@Translation.Get("Integration - Anmälare", Enums.TranslationSource.TextTranslation)</h4>
                 <div class="container">                    
                     <div class="row">
-                        <div class="span12">
-                            <input type="radio" name="Setting.IntegrationType" @(Model.Setting.IntegrationType == 1 ? "checked='checked'" : "") id="Customer_Setting_IntegrationType1" onclick="ShowRelatedFields()" value="1" />
-                            @Translation.Get("LDAP", Enums.TranslationSource.TextTranslation)
-                            <input type="radio" name="Setting.IntegrationType" @(Model.Setting.IntegrationType == 0 ? "checked='checked'" : "") id="Customer_Setting_IntegrationType2" onclick="ShowRelatedFields()" value="0" />
-                            @Translation.Get("CSV", Enums.TranslationSource.TextTranslation)
-                            <br /><br />                                                      
+                        <div class="span12">                                                    
                             <table class="tableform" id="customerSync">       
                                 <tr>
                                     <td class="span3">
-                                        @* To be for design *@
+                                        @Translation.Get("Format", Enums.TranslationSource.TextTranslation)
                                     </td>
                                     <td class="span9">
-                                        @* To be for design *@
+                                        <input type="radio" name="Setting.IntegrationType" @(Model.Setting.IntegrationType == 1 ? "checked='checked'" : "") id="Customer_Setting_IntegrationType1" onclick="ShowRelatedFields()" value="1" />
+                                        @Translation.Get("LDAP", Enums.TranslationSource.TextTranslation)
+                                        <br />
+                                        <input type="radio" name="Setting.IntegrationType" @(Model.Setting.IntegrationType == 0 ? "checked='checked'" : "") id="Customer_Setting_IntegrationType2" onclick="ShowRelatedFields()" value="0" />
+                                        @Translation.Get("CSV", Enums.TranslationSource.TextTranslation)                                       
                                     </td>
-                                </tr>             
-                                <tr>
-                                    <td class="customerSync">
-                                        <strong>@Translation.Get("LDAP", Enums.TranslationSource.TextTranslation)</strong>
-                                    </td>                                   
-                                </tr>
-                                <tr class="CSVSync">
-                                    <td>
-                                        <strong>@Translation.Get("CSV", Enums.TranslationSource.TextTranslation)</strong>
-                                    </td>                                    
-                                </tr>
+                                </tr>                                            
                                 <tr>                                    
                                     <td class="customerSync">
                                         @Translation.Get("Server", Enums.TranslationSource.TextTranslation)
