--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
@@ -296,12 +296,12 @@
                                         </li>
                                     }
 
-                                    @*@if (model.IsContractVisible())
+                                    @if (model.IsContractVisible())
                                         {
                                             <li><a href="@Url.Action("Index", "Contracts", new { area = "" })">
                                                 <img src="@Url.Content("~/Content/icons/deal.png")"/>
-                                                @Translation.Get("Avtal")</a></li>
-                                        }*@
+                                                @Translation.GetCoreTextTranslation("Avtal")</a></li>
+                                        }
                                     @if (model.IsInvoicesVisible())
                                     {
                                         <li>
