[FIX]#60843 - Deleted logfile cause error if parentLog_id exists.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -192,7 +192,7 @@
                                                                  }
                                                                  else
                                                                  {
-                                                                     <a target="_blank" href="@Html.Action("LogFileLinkVD", "FileHandler", new {id = r.Id, fileName = l.FileName})"><i class="icon-file"></i> @l.FileName</a>
+                                                                     <a target="_blank" class="isExisted" href="@Html.Action("LogFileLinkVD", "FileHandler", new {id = r.Id, fileName = l.FileName})"><i class="icon-file"></i> @l.FileName</a>
                                                                  }
                                                              }
                                                          }
