--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
@@ -7,6 +7,14 @@
 <script type="text/javascript">
     $(document).ready(function () {
         LogInitForm();
+
+        $("a.isExisted").on("click", function (e) {
+            var exists = $(this).checkUrlFileExists();
+            if (!exists) {
+                e.preventDefault();
+                ShowToastMessage(window.parameters.fileExistError, "error");
+            }
+        });
     });
 </script>
 }
