[FIX] #61636 - Contract module - Translation of filter options.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
@@ -69,12 +69,12 @@
                                         <table style="border-style:solid;border-width:thin;color:gray;font-weight:bold;font-size:11px;border-color:#E0E0E0; font-family: Helvetica Neue, Helvetica, Arial, sans-serif">
                                             <tr style="border-style:solid;border-width:thin">
                                                 <td colspan="2" style="color:black; background-color:#f9f9f9; padding-left:5px">
-                                                    Avtal
+                                                    @Translation.GetCoreTextTranslation("Avtal")
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    Antal
+                                                    @Translation.GetCoreTextTranslation("Antal")
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right; width:100px;border-color:#E0E0E0;padding-right:5px">
@@ -83,7 +83,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;padding-right:100px;border-color:#E0E0E0;padding-left:5px">
-                                                    Pågående
+                                                    @Translation.GetCoreTextTranslation("Pågående")
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -92,7 +92,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    Avslutade
+                                                    @Translation.GetCoreTextTranslation("Avslutade")
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -100,26 +100,25 @@
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
-                                                <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span >För uppsägning</span>
+                                                <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
+                                                    <span>@Translation.GetCoreTextTranslation("För uppsägning")</span>
                                                 </td>
-
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
                                                     <span > @Model.ContractNoticeOfRemovalCount </span>
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span > För uppföljning</span>
+                                                    <span>@Translation.GetCoreTextTranslation("För uppföljning")</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
-                                                    <span >  @Model.ContractFollowUpCount </span>
+                                                    <span> @Model.ContractFollowUpCount </span>
                                                 </td>
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span >Löpande</span>
+                                                    <span>@Translation.GetCoreTextTranslation("Löpande")</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
