[ADD]#61773 GDPR - Improved solution - development.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -254,8 +254,7 @@
                 SaveFavoritesAction: '@Url.Action("SaveDataPrivacyFavorites")',
                 GetCustomerCaseFieldsAction: '@Url.Action("GetCustomerCaseFields")',
                 DeleteFavoriteAction: '@Url.Action("DeleteDataPrivacyFavorite")',
-                CreateOperationAuditAction: '@Url.Action("CreateDataPrivacyOperationAudit")',
-                GetOperationProgressAction: '@Url.Action("GetOperationProgress", "GDPRProgress")'
+                GetTaskProgressAction: '@Url.Action("GetTaskProgress", "GDPRProgress")'
             },
             translations:
             {
