--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/EditFaq.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/EditFaq.cshtml
@@ -7,6 +7,7 @@
 @Scripts.Render("~/bundles/dhhelpdesk")
 @Scripts.Render(BundleConfig.ScriptNames.ConfirmationDialog)
 <script>
+    $.validator.setDefaults({ ignore: ':hidden:not(textarea)' });
     $(document).ready(function () {
         FAQInitForm();
     });
@@ -50,7 +51,7 @@
             <ul class="secnav">
                 @if (Model.UserHasFaqAdminPermission)
                 {
-                <li>@Html.ActionLink(Translation.GetCoreTextTranslation("Spara"), "edit", null, new { onclick = "$('#target').submit();return false;", @class = "btn" })</li>
+                <li>@Html.ActionLink(Translation.GetCoreTextTranslation("Spara"), "edit", null, new { onclick = "tinymce.triggerSave();$('#target').submit();return false;", @class = "btn" })</li>
                     <li><a id="delete_button" class="btn">@Translation.GetCoreTextTranslation("Ta bort")</a></li>
                 }
                 <li><a href="@Url.Action("Index")?showDetails=@Model.ShowDetails.ToString()" class="btn">@Translation.GetCoreTextTranslation("Avbryt")</a></li>
