[UPD] - #55894 - Contract permission is added to User

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
@@ -333,8 +333,8 @@
                 @Translation.GetCoreTextTranslation("Avtal")
             </td>
             <td>
-                <input data-field="contractPermission" type="checkbox" name="User.ContractPermission" @(Model.User.ContractPermission ? "checked=checked" : "") value="true"/>
-                <input type="hidden" name="User.ContractPermission" value="false" />
+                <input data-field="contractPermission" type="checkbox" name="User.ContractPermission" @(Model.User.ContractPermission == 1 ? "checked=checked" : "") value="1"/>
+                <input type="hidden" name="User.ContractPermission" value="0" />
                 &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har administratörsbehörighet till internt kontrakt")
             </td>
         </tr>
