[FIX] #61809 Documents - Show change date at start page

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
@@ -12,7 +12,7 @@
                 @foreach (var document in Model)
                 {
                     <div class="box-post" onclick="">
-                        <div class="label purple">@document.CustomerName | @document.CreatedDate.ToFormattedDate()</div>
+                        <div class="label purple">@document.CustomerName | @document.ChangedDate.ToFormattedDate()</div>
                         <div class="textrow">
                             @if (document.Size == 0)
                             {
