[FIX]#60851 Automatic search of email address doesn't work for users that belongs to group user.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_SendIntLogToDiallog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_SendIntLogToDiallog.cshtml
@@ -12,6 +12,7 @@
             emailLabel: '@Translation.GetForJS("E-postgrupp")',
             initLabel: '@Translation.GetForJS("Anmälare")',
             wgLabel: '@Translation.GetForJS("Driftgrupp")',
+            usersLabel: '@Translation.GetForJS("Användare")',
             noResultLabel: '@Translation.GetForJS("Inga resultat matchar")'
         }
         var admins = @Html.SerializeObjectToJson(Model.Administrators.Items);
