--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 @{
     var model = Html.MasterModel();
 
-    var GlobalSetting = model != null ? model.GlobalSettings.Where(x => x.ApplicationName != null).FirstOrDefault() : null;
+    var GlobalSetting = model != null ? model.GlobalSettings.FirstOrDefault(x => x.ApplicationName != null) : null;
 
     var text = model != null ? model.CustomerSetting.QuickNewCaseLinkText : string.Empty;
     var url = model != null ? model.CustomerSetting.QuickNewCaseLinkUrl : string.Empty;
@@ -20,7 +20,7 @@
     <script type="text/javascript">
         var trans_yes = '@Translation.GetForJS("Ja", Enums.TranslationSource.TextTranslation)';
         var trans_no = '@Translation.GetForJS("Nej", Enums.TranslationSource.TextTranslation)';
-        var placeholder_text_multiple = '@Html.Raw(Translation.Get("Välj en eller flera"))';
+        var placeholder_text_multiple = '@Html.Raw(Translation.GetForJS("Välj en eller flera"))';
         var placeholder_text_single = '@Html.Raw(Translation.GetForJS("Välj ett av alternativen"))';
         var no_results_text = '@Translation.GetForJS("Inga resultat matchar")';
     </script>
