[Fix] #61821 Selfservice news - Bulletin Board, small fixes remove extra space

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Start/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Start/Index.cshtml
@@ -33,7 +33,7 @@
                         {
                             foreach (var b in Model.BulletinBoard)
                             {                                                                                   
-                                <p> <strong> @Html.DisplayFor(m=> b.ChangedDate , "DateAndTime")  </strong> <br /> &nbsp;&nbsp; @Html.Raw(b.Text) </p>
+                                <p> <strong> @Html.DisplayFor(m=> b.ChangedDate , "DateAndTime")  </strong> <br /> @Html.Raw(b.Text) </p>
                                 <br />
                             }
                         }                    
